fix: adjust modal display properties for improved visibility and layout

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -5,12 +5,12 @@
   left: 0;
   bottom: 0;
   right: 0;
+  display: flex;
   background-color: rgba(0, 0, 0, 0.5);
   visibility: hidden;
   opacity: 0;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
   padding: 0 10px;
   transition: visibility 0.5s linear, opacity 0.5s linear;
 }
@@ -20,10 +20,8 @@
 }
 
 .modal_opened {
-  display: flex;
   visibility: visible;
   opacity: 1;
-  visibility: visible;
 }
 
 .modal__container {
@@ -144,6 +142,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 1;
+  border: 1px solid;
 }
 
 .modal__input:hover {
